EAFT-74 add border, added proper dummy data, fixed calendar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -139,7 +139,7 @@ body {
   margin-top: 30px;
   margin-left: 20px;
   position: absolute;
-  width: 125px;
+  width:auto;
   height: 36px;
   font-family: 'helvetica';
   font-style: normal;
